<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/full_screen_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Add to favorites"
            android:padding="16dp"
            android:src="@drawable/ic_favorite_border"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/set_home_screen_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_home_screen"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/set_lock_screen_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_lock_screen"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/set_both_screens_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_both_screens" />

    </LinearLayout>

</RelativeLayout>